--- a/homework1/index.html
+++ b/homework1/index.html
@@ -7,13 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
+    
 </head>
 
 <body>
     <header>
         <nav class="header_container">
             <img class="header_logo" src="img/logo-SA.png">
-            <div >
+            <div>
                 <ul class="nav_menu">
                     <li><a class="nav_menu_bttn" href="">Courses</a></li>
                     <li><a class="nav_menu_bttn" href="">Teachers</a></li>
@@ -22,14 +23,36 @@
                     <li><a class="nav_menu_apply_button" href="">Apply now</a></li>
                 </ul>
             </div>
+
+
+<!---burger menu -->
+            <input id="toggle" type="checkbox"></input>
+            <label for="toggle" class="hamburger">
+                <div class="top-bun"></div>
+                <div class="meat"></div>
+                <div class="bottom-bun"></div>
+            </label>
+
+            <div class="nav">
+                <div class="nav-wrapper">
+                    <nav>
+                        <a class="burger_menu_bttn" href="#">Courses</a><br>
+                        <a class="burger_menu_bttn" href="#">Teachers</a><br>
+                        <a class="burger_menu_bttn" href="#">Prices</a><br>
+                        <a class="burger_menu_bttn" href="#">About us</a>
+                    </nav>
+                </div>
+            </div>
+
         </nav>
     </header>
     <main>
         <section class="top_section">
-            <div class="top_section_text_content" >
+            <div class="top_section_text_content">
                 <div class="top_section_content">
                     <h3 class="top_section_title">Desperate to learn drawing? We’ll teach you!</h3>
-                    <p class="top_section_text">Our school has more than 20 years of experience in teaching people who always thought that they
+                    <p class="top_section_text">Our school has more than 20 years of experience in teaching people who
+                        always thought that they
                         don’t have even a slightest hint of a talent. Some other descriptive stuff that I’m too lazy to
                         make up. </p>
                     <h5 class="top_section_text">With us you will get:</h5>
@@ -48,11 +71,12 @@
         </section>
         <section class="bottom_section">
             <div>
-                <img src="img/8474887_old-letter 1-SA.png">
+                <img class="bottom_section_image" src="img/8474887_old-letter 1-SA.png">
             </div>
             <div class="bottom_section_content_text">
                 <h3 class="bottom_section_title">Interested but currently have other plans?</h3>
-                <p class="bottom_section_text">Subscribe to our newsletter to stay tuned and get hottest updates and deals</p>
+                <p class="bottom_section_text">Subscribe to our newsletter to stay tuned and get hottest updates and
+                    deals</p>
                 <a class="bottom_section_button" href="">Subscribe</a>
             </div>
         </section>
