fixed some styles and added hover to footer menu elements

--- a/homework1/index.html
+++ b/homework1/index.html
@@ -6,15 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link href="reset.css" rel="stylesheet" type="text/css" />
+    <link href="normalize.css" rel="stylesheet" />
     <link rel="stylesheet" href="index.css">
-    
 </head>
 
 <body>
     <header>
         <nav class="header_container">
             <img class="header_logo" src="img/logo-SA.png">
-            <div>
+            <div class="nav_menu_container">
                 <ul class="nav_menu">
                     <li><a class="nav_menu_bttn" href="">Courses</a></li>
                     <li><a class="nav_menu_bttn" href="">Teachers</a></li>
@@ -25,7 +27,7 @@
             </div>
 
 
-<!---burger menu -->
+            <!---burger menu -->
             <input id="toggle" type="checkbox"></input>
             <label for="toggle" class="hamburger">
                 <div class="top-bun"></div>
